--- a/style.css
+++ b/style.css
@@ -36,5 +36,11 @@ input[type="text"] {
 
 #data {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
+}
+
+#air-pollution-data h3 {
+    text-align: center;
+    font-size: 1.5em;
 }
