--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ input[type="text"] {
 
 #city-name {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 #data {
@@ -42,5 +42,5 @@ input[type="text"] {
 
 #air-pollution-data h3 {
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
