--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
 body {
     margin: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #5f5d5d;
+    background-color: #e3e5ee;
 }
 
+/* HEADER */
+header {
+    background-color: lightblue;
+    padding: 20px;
+    text-align: center;
+}
+
+/* MAIN ELEMENT */
 #main {
     max-width: 500px;
     margin: 3em auto;
     padding: 1em;
 }
 
+/* MAIN FORM */
 #main form label {
     display: block;
     font-size: 1.5rem;
@@ -34,6 +43,7 @@ input[type="text"] {
     font-size: 1.5rem;
 }
 
+/* DATA SECTION */
 #data {
     display: flex;
     flex-wrap: wrap;
@@ -43,4 +53,11 @@ input[type="text"] {
 #air-pollution-data h3 {
     text-align: center;
     font-size: 1.5rem;
+}
+
+/* FOOTER */
+footer {
+    background-color: lightblue;
+    padding: 20px;
+    text-align: center;
 }
