--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     margin: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Roboto','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #e3e5ee;
 }
 
