--- a/style.css
+++ b/style.css
@@ -21,12 +21,17 @@ header {
 /* MAIN ELEMENT */
 #main {
     min-height: 100vh;
-    max-width: 500px;
+    max-width: 100%;
     margin: 3em auto;
     padding: 1em;
 }
 
 /* MAIN FORM */
+#main form {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
 #main form label {
     display: block;
     font-size: 1.5rem;
